# sequence_control

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  sample.env  start_server.sh  wsgi.py
.github/workflows/: python-app.yml
app/: __init__.py
app/controllers/: __init__.py  locations_for_project.py  read_file.py  role_decorator.py  works.py
app/forms/: __init__.py  auth.py  import_file.py  location.py  project.py  reason.py  search.py  work.py  work_change_loc.py  work_change_ms.py  work_change_reason.py  work_edit_date.py  work_edit_note.py  work_package.py  work_reforecast.py  work_select_complete.py  wp_milestone.py
app/models/: __init__.py  building.py  deliverable.py  level.py  location.py  milestone.py  plan_date.py  project.py  project_milestone.py  project_viewer.py  project_wpmanager.py  reasons.py  user.py  utils.py  work.py  work_package.py  wp_milestone.py
app/templates/: admin_add.html  base.html  building_add.html  control.html  control_nav.html  define.html  define_nav.html  edit_work.html  edit_work_date.html  edit_work_note.html  flash.html  footer  header.html  import_file.html  import_locations.html  import_milestone.html  info.html  level_add.html  location_add.html  locations.html  main_page.html  milestone_add.html  (+22 more)
tests/: conftest.py  db_test_data.py  test_auth.py  test_control.py  test_db_test_data.py  test_edit_user.py  test_location.py  test_plan.py  test_project.py  test_project_manager.py  test_read_file.py  test_reasons.py  test_work_package.py  test_wp_milstone.py  utils.py
(+52 files in other folders)
